Builder: Suggestions from code review
Co-authored-by: Benjamin Swart <32597377+SvizelPritula@users.noreply.github.com>

--- a/fixtures/max/README
+++ b/fixtures/max/README
@@ -3,7 +3,7 @@
 Fixture for complicated build & run sections.
 
 ## Statement
-First containing number of integers $N$.
-Second line contains $N$ integers.
+The first line contais the number of integers $N$.
+The second line contains $N$ integers.
 
-Output maximum of those integers.
+Output the maximum of those integers.
